<resources>
    <string name="app_name">English For Kids</string>
    <string name="mode_learning">Học Tiếng Anh</string>
    <string name="mode_learning_tool_tip">Vừa chơi vừa học Tiếng Anh thật vui vẻ!</string>
    <string name="mode_competitive">Thử thách</string>
    <string name="mode_competitive_tool_tip">So tài Tiếng Anh cùng các người chơi khác!</string>
    <string name="next">Tiếp Tục</string>
    <string name="back">Quay Lại</string>
    <string name="setting">Cài Đặt</string>
    <string name="setting_learning_remind">Nhắc học Tiếng Anh.</string>
    <string name="setting_daily_reward_remind">Nhắc nhận quà đăng nhập.</string>
    <string name="check">Kiểm Tra</string>
    <string name="leader_board">Xếp Hạng Tuần</string>
    <string name="leader_board_title">Chào mừng bạn đến với bảng xếp hạng tuần này!</string>
    <string name="username">Tên E4K của bạn!</string>
    <string name="password">Mật khẩu</string>
    <string name="hidden_password">●●●●●●●</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="username_desc">Tên hiển thị</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="get_start">Bắt Đầu Thôi Nào!</string>
    <string name="user_optional_desc">Hãy đặt biệt danh thật ngầu nào!</string>
    <string name="welcome_text_register">Đăng ký</string>
    <string name="have_account_desc">Đã có tài khoản? <font fgcolor='#58CC00'><u>Đăng nhập ngay</u></font></string>
    <string name="no_account_desc">Chưa có tài khoản? <font fgcolor='#58CC00'><u>Đăng ký ngay</u></font></string>
    <string name="welcome_text_login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="welcome_text_desc">Số điện thoại dùng để đăng nhập hoặc mở tài khoản nếu bạn lần đầu dùng E4K.</string>
    <string name="verify_your_otp">Hãy nhập mã OTP đã được gửi đến số điện thoại của bạn.</string>
    <string name="tap_connect_pairs">Chọn các cặp tương ứng</string>
    <string name="skip_current_question">Câu kế tiếp</string>
    <string name="complete_round_within">Hoàn thành trong </string>
    <string name="pick_correct_image">Chọn hình ảnh đúng</string>
    <string name="complete_lesson">Hoàn thành!</string>
    <string name="total_score">Điểm</string>
    <string name="fast_score">Nhanh</string>
    <string name="perfect_score">Hoàn hảo!</string>
    <string name="what_can_you_hear">Bạn nghe được gì?</string>
    <string name="better_luck_next_time">Cố gắng hơn ở lần sau bạn nhé!</string>
    <string name="translate_this_sentence">Hoàn thành câu này</string>
    <string name="type_your_answer_here">Nhập câu trả lời của bạn tại đây…</string>
    <string name="find_component_now">Thử thách trình độ Tiếng Anh của bạn bằng những bài tập trắc nghiệm của ứng dụng!</string>
    <string name="find_match">Ghép Trận</string>
    <string name="loading_pls_wait">Đang tìm đối thủ xứng tầm…</string>
    <string name="loading_test">Hệ thống đang tạo bài luyện tập…</string>
    <string name="found_opponent">Đã có bài luyện tập!</string>
    <string name="accept_match">Chiến Thôi!</string>
    <string name="refind_match">Tìm Tiếp</string>
    <string name="cancel_match">Thoát</string>
    <string name="got_winner">We Got A Winner!</string>
    <string name="find_next_opponent">Chiến Tiếp!</string>
    <string name="competitive_complete_desc">Trận đấu đã kết thúc!\nBạn có muốn tìm đối thủ tiếp theo?!</string>
    <string name="logout">Đăng xuất</string>
    <string name="user_info">Thông tin cá nhân</string>
    <string name="display_name">Tên</string>
    <string name="statistic">Thống kê</string>
    <string name="achievement">Thành tích</string>
    <string name="notification_setting">Cài đặt thông báo</string>
    <string name="user_profile_and_setting">Hồ sơ</string>
    <string name="user_profile_desc">Hồ sơ của bạn</string>
    <string name="done">Hoàn Tất</string>
    <string name="review">Ôn Tập</string>
    <string name="game_play_lock_desc_title">Màn chơi bị khoá</string>
    <string name="game_play_lock_desc">Hãy hoàn thành tất cả các màn chơi trước để mở khoá bạn nhé!</string>
    <string name="out_of_life_desc">Sử dụng vàng đã tích luỹ để mua thêm tim bạn nhé!</string>
    <string name="restore_full_life">Hồi hoàn toàn</string>
    <string name="restore_3_life">Hồi 3 tim</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="no_thanks">Không, cảm ơn</string>
    <string name="save">Lưu</string>
    <string name="question_mark">\?</string>
    <string name="complete_this_sentence">Dịch câu này</string>
    <string name="update_username_success">Cập nhật thông tin thành công!</string>
    <string name="forgot_password_desc">Nhập số điện thoại bạn đã dùng để đăng ký để xác thực và lấy lại mật khẩu!</string>
    <string name="course_completed">Hoàn thành!</string>
    <string name="confirm_dialog_msg">Xác nhận</string>
    <string name="confirm_quit_game_play_title">Đợi đã, đừng đi mà!</string>
    <string name="confirm_quit_game_play_desc">Bạn đang học đúng hướng! Bạn có chắc muốn dừng lại không?!</string>
    <string name="confirm_quit_exam">Nếu bạn thoát, tiến trình của bài tập này sẽ bị huỷ bỏ và sẽ không có điểm!</string>
    <string name="confirm_msg_quit">Dừng lại</string>
    <string name="confirm_msg_stay">Chơi tiếp</string>
    <string name="confirm_otp">Xác Nhận</string>
    <string name="confirm_otp_err">Lỗi Xác Thực</string>
    <string name="request_err">Lỗi</string>
    <string name="request_err_desc">Đã xảy ra lỗi! Bạn vui lòng thử lại sau nhé!</string>
    <string name="press_again_to_exit">Nhấn lần nữa để thoát!</string>
    <string name="confirm_logout">Bạn có chắc chắn muốn Đăng xuất không?!</string>
    <string name="confirm_yes">Có</string>
    <string name="confirm_no">Không</string>
    <string name="complete_multiple_choice_mode">Hoàn thành thử thách!</string>
    <string name="review_submit">Xem lại đáp án</string>
    <string name="oopss">Úi! Có bài sai!</string>
    <string name="fix_wrong_exp">Cùng nhau sửa những bài tập bạn đã làm sai nào!</string>
    <string name="course_locked_desc">Khoá học bị khoá</string>
    <string name="course_locked">Hoàn thành các khoá học trước để mở khoá học này bạn nhé!</string>
    <string name="round_locked_desc">Màn chơi bị khoá</string>
    <string name="round_locked">Hoàn thành các màn chơi trước để mở khoá màn chơi này bạn nhé!</string>
    <string name="change_password_success">Thay đổi mật khẩu thành công!</string>
    <string name="claimed_success">Nhận quà đăng nhập thành công!\n Trở lại và nhận thêm quà vào ngày mai bạn nhé!</string>
    <string name="claimed_err">Đã xảy ra lỗi trong lúc nhận thưởng..\nBạn thử lại sau nhé!</string>
    <string name="get_exam_err">Đã xảy ra lỗi trong lúc soạn đề..\nBạn thử lại sau nhé!</string>
    <string name="buy_heart_success">Mua thành công! Cùng học thật tốt bạn nhé!</string>
    <string name="buy_more_heart_success">Mua thành công! Hãy tận dụng để học thật tốt bạn nhé!</string>
    <string name="wrong_otp_err_msg">Mã OTP không chính xác. Vui lòng kiểm tra lại!</string>
    <string name="confirm_otp_err_occur_msg">Đã có lỗi trong quá trình xác thực!\n Bạn vui lòng thử lại nhé!</string>
    <string name="wrong_phone_or_password">Số điện thoại hoặc mật khẩu không chính xác!</string>
    <string name="wrong_old_password">Mật khẩu cũ không chính xác!</string>
    <string name="err_getting_leader_board">Đã có lỗi trong quá trình xử lý bảng xếp hạng!\nBạn thử lại sau nhé!</string>
    <string name="invalid_phone_format_err">* Số điện thoại không hợp lệ!</string>
    <string name="phone_existed">* Số điện thoại đã được sử dụng bởi người dùng khác!</string>
    <string name="phone_not_existed">* Số điện thoại này không tồn tại hoặc chưa đăng ký tài khoản E4K!</string>
    <string name="empty_phone_err">* Số điện thoại không được bỏ trống!</string>
    <string name="empty_display_err">* Tên hiển thị không được bỏ trống!</string>
    <string name="invalid_display_err">* Tên phải có ít nhất 4, nhiều nhất 12 kí tự!</string>
    <string name="empty_password_err">* Mật khẩu không được bỏ trống!</string>
    <string name="invalid_password_err">* Mật khẩu phải có ít nhất 8 kí tự!</string>
    <string name="invalid_cf_password_err">* Mật khẩu không trùng khớp!</string>
    <string name="err_network_not_connected">Không kết nối được với máy chủ!</string>
    <string name="err_network_not_available">Không có kết nối internet!</string>
    <string name="weekly_score">Điểm xếp hạng tuần</string>
    <string name="weekly_score_desc">Điểm xếp hạng tuần để tính xếp hạng giữa bạn và các người chơi khác! Điểm sẽ được reset vào mỗi thứ 2 hàng tuần!</string>
    <string name="err_connect_internet_to_learn">Kết nối mạng để bắt đầu học bạn nhé!</string>
    <string name="err_unsaved_update">Thông tin đã chỉnh sửa chưa được lưu. Bạn có chắc muốn thoát?!</string>
    <string name="review_question_desc">Đáp án</string>
    <string name="exam_result_desc">Kết quả bài làm</string>
    <string name="full_heart_err">Tim bạn hiện đang đầy! Không thể mua thêm!</string>
    <string name="not_enough_gold">Hoàn thành các bài học hoặc tham gia chế độ luyện tập để có thêm vàng!</string>
    <string name="not_enough_gold_title">Không đủ vàng!</string>
    <string name="daily_reward_already_claimed">Bạn đã nhận phần quà này rồi! Không thể nhận lại!</string>
    <string name="daily_reward_locked">Bạn chưa đủ điều kiện để nhận phần quà này!</string>
    <string name="audio_file_path">android.resource://%1$s/raw/%2$s</string>
    <string name="perfect_score_pattern">%1$d%%</string>
    <string name="weekly_exp_pattern">%1$d</string>
    <string name="complete_within_turn">Không thể hoàn thành trong %1$d lượt…</string>
    <string name="resend_otp_timer">Gửi lại mã (%1$s)</string>
    <string name="resend_otp">Gửi lại mã</string>
    <string name="lesson_pattern">Bài %1$d</string>
    <string name="course_progress_pattern">%1$d/%2$d bài học</string>
    <string name="daily_reward_date_pattern">Day %1$d</string>
    <string name="daily_reward_price_pattern">+%1$d</string>
    <string name="answer_multiple_choice_pattern">%1$s. %2$s</string>
    <string name="level_pattern">Cấp %1$d</string>
    <string name="you_are_having_pattern">Bạn đang có %1$d</string>
    <string name="join_date_pattern">Tham gia tháng %1$s, %2$s</string>
    <string name="round_pattern">Màn %1$d / %2$d</string>
    <string name="start_round_to_earn_pattern">Bắt đầu ngay</string>
    <string name="start_played_round_to_earn_pattern">Ôn tập</string>
    <string name="bonus_gold_pattern">+ %1$d</string>
    <string name="course_title_pattern">Phần %1$d: %2$s</string>
    <string name="start_course">Bắt Đầu</string>
    <string name="game_progress_pattern">%1$d/%2$d</string>
    <string name="multiple_choice_pattern"><font fgcolor='#8937C7'>Câu %1$02d:</font> %2$s</string>
    <string name="multiple_choice_pattern_review"><font fgcolor='#8937C7'>Question:</font> %1$s</string>
    <string name="review_answer_pattern">Câu %1$02d:</string>
    <string name="notification_learning_channel_id">notification_learning_id</string>
    <string name="notification_learning_channel_name">Nhắc học Tiếng Anh</string>
    <string name="notification_learning_title">Giờ học đến rồi!</string>
    <string-array name="course_color_list">
        <item>#58CC00</item>
        <item>#945F1E</item>
        <item>#20B0F5</item>
        <item>#FD4C4A</item>
        <item>#D080FE</item>
        <item>#20B0F5</item>
        <item>#945F1E</item>
        <item>#58CC00</item>
        <item>#FD4C4A</item>
        <item>#F8D356</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>