<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.setting.UpdateProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bg_border_bottom"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:paddingHorizontal="@dimen/_4sdp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_round_arrow_back_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/_8sdp"
            android:paddingVertical="@dimen/_4sdp"
            android:text="@string/user_profile_desc"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <Space
            android:id="@+id/btn_setting_notification"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cimv_user_pfp"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            app:civ_border_color="@color/gray"
            app:civ_border_width="2dp"
            android:src="@drawable/test_rm"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_desc"
            android:layout_marginTop="@dimen/_24sdp"
            android:textSize="@dimen/_20ssp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/light_black"
            android:includeFontPadding="false"/>

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_word_border"
            android:paddingVertical="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:hint="@string/username"
            android:textSize="@dimen/_16ssp"
            android:paddingHorizontal="@dimen/_8sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/light_black"
            android:includeFontPadding="false"/>

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_word_border"
            android:paddingVertical="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:hint="@string/phone_number"
            android:enabled="false"
            android:inputType="number"
            android:textSize="@dimen/_16ssp"
            android:paddingHorizontal="@dimen/_8sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/save"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:backgroundTint="@color/daily"
            app:cornerRadius="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/cancel_match"
            android:layout_marginTop="@dimen/_6sdp"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:textColor="@color/text_incorrect"
            android:textSize="@dimen/_18ssp"
            android:textAlignment="center"/>
    </LinearLayout>

</RelativeLayout>