<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    app:strokeWidth="1dp"
    app:strokeColor="@color/light_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:padding="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/pb_progress"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                android:max="10"
                android:progress="0"
                app:indicatorColor="@color/light_blue_gray"
                app:indicatorSize="@dimen/_120sdp"
                app:trackColor="@color/classic"
                app:trackCornerRadius="10dp"
                app:trackThickness="@dimen/_5sdp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/cimv_avatar"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerInParent="true"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/find_opponent" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_test"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_8sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/light_black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/daily"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            app:cornerRadius="@dimen/_10sdp"
            android:visibility="gone"
            android:text="@string/accept_match"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_find_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/classic"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            app:cornerRadius="@dimen/_10sdp"
            android:visibility="gone"
            android:text="@string/refind_match"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/text_incorrect"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            app:cornerRadius="@dimen/_10sdp"
            android:visibility="visible"
            android:text="@string/cancel_match"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>