<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_register_now"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="@dimen/_12sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cover_img"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/test_rm_2"
            app:civ_border_color="@color/daily"
            app:civ_border_width="2dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:fontFamily="@font/be_vietnam_bold"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textColor="@color/daily"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_container"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            app:boxStrokeErrorColor="@color/text_incorrect"
            app:boxStrokeWidth="@dimen/_2sdp"
            app:helperTextTextColor="@color/text_incorrect"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingVertical="@dimen/_12sdp"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/edt_cursor"
                android:textSize="@dimen/_16ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_container"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            app:boxStrokeErrorColor="@color/text_incorrect"
            app:boxStrokeWidth="@dimen/_2sdp"
            app:helperTextTextColor="@color/text_incorrect"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="@dimen/_12sdp"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/edt_cursor"
                android:textSize="@dimen/_16ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/be_vietnam_bold"
            android:includeFontPadding="false"
            android:text="@string/forgot_password"
            android:textColor="@color/daily"
            android:textSize="@dimen/_16ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:enabled="false"
            android:fontFamily="@font/be_vietnam_bold"
            android:includeFontPadding="false"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/welcome_text_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:cornerRadius="@dimen/_12sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:text="@string/no_account_desc"
        android:textAlignment="center"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/be_vietnam_bold"
        android:includeFontPadding="false"/>

</RelativeLayout>