<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.ForgotPasswordFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_border_bottom"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_8sdp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_round_arrow_back_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"/>

        <Space
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_12sdp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cover_img"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/test_rm_2"
            app:civ_border_color="@color/daily"
            app:civ_border_width="2dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textColor="@color/daily"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:text="@string/forgot_password_desc"
            android:layout_marginBottom="@dimen/_4sdp"
            android:textColor="@color/light_black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_container"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            app:boxStrokeErrorColor="@color/text_incorrect"
            app:boxStrokeWidth="@dimen/_2sdp"
            app:helperTextTextColor="@color/text_incorrect"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingVertical="@dimen/_12sdp"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/edt_cursor"
                android:textSize="@dimen/_16ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/daily"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_12sdp"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>

</LinearLayout>